Changepassword alignment issues

--- a/client/src/components/EditProfile/changepassword.css
+++ b/client/src/components/EditProfile/changepassword.css
@@ -23,11 +23,11 @@ div.form-inline label.col-5 {
   justify-content: flex-end;
 }
 div.error-style {
-  text-align: left;
+  text-align: right;
   display: none;
-  width: 100%;
   margin-top: 0.25rem;
-  font-size: 14px;
+  font-size: 13px;
+  margin-left: -15px;
 }
 
 
@@ -41,7 +41,8 @@ div.error-style {
 .username-h1 {
   padding-bottom: 10px;
   font-size: 20px;
-  font-weight: 400;
+  padding-left: 10px;;
+  font-weight: 500;
   line-height: 25px;
   margin-bottom: 10px;
 }
@@ -60,6 +61,9 @@ div.error-style {
   .submit-btn{
     text-align: center;
   }
+  div.error-style {
+    text-align: right;
+  }
 }
 
 @media(min-width :425px) and (max-width:575px) {
@@ -77,6 +81,10 @@ div.error-style {
   .submit-btn{
     float:left
   }
+  div.error-style {
+    text-align: left;
+    margin-left: 0;
+  }
 }
 
 @media(min-width :320px) and (max-width:424px) {
@@ -93,6 +101,10 @@ div.error-style {
   }
   .submit-btn{
     float:left
+  }
+  div.error-style {
+    text-align: left;
+    margin-left: 0;
   }
 
 }
